@@ -2,16 +2,25 @@
 
 AM_CPPFLAGS = \
 	-DLOCALEDIR="\"$(localedir)\"" \
+	-DSBINDIR="\"$(sbindir)\"" \
 	-I$(top_builddir) -I$(top_srcdir) \
 	-I$(top_srcdir)/intl
 
 
 dist_man_MANS = \
-	man/initctl.8
+	man/initctl.8 \
+	man/reboot.8 \
+	man/shutdown.8 \
+	man/runlevel.8 \
+	man/telinit.8
 
 
 sbin_PROGRAMS = \
-	initctl
+	initctl \
+	reboot \
+	runlevel \
+	shutdown \
+	telinit
 
 initctl_SOURCES = \
 	initctl.c
@@ -23,6 +32,59 @@ initctl_LDADD = \
 	$(LTLIBINTL)
 
 
+reboot_SOURCES = \
+	reboot.c
+
+reboot_LDFLAGS = -static
+reboot_LDADD = \
+	../../upstart/libupstart.la \
+	../../nih/libnih.la \
+	$(LTLIBINTL)
+
+
+runlevel_SOURCES = \
+	runlevel.c
+
+runlevel_LDFLAGS = -static
+runlevel_LDADD = \
+	../../upstart/libupstart.la \
+	../../nih/libnih.la \
+	$(LTLIBINTL)
+
+
+shutdown_SOURCES = \
+	shutdown.c
+
+shutdown_LDFLAGS = -static
+shutdown_LDADD = \
+	../../upstart/libupstart.la \
+	../../nih/libnih.la \
+	$(LTLIBINTL)
+
+
+telinit_SOURCES = \
+	telinit.c
+
+telinit_LDFLAGS = -static
+telinit_LDADD = \
+	../../upstart/libupstart.la \
+	../../nih/libnih.la \
+	$(LTLIBINTL)
+
+
+runlevel_SOURCES = runlevel.c
+runlevel_LDFLAGS = -static
+runlevel_LDADD = ../../nih/libnih.la $(LTLIBINTL)
+
+shutdown_SOURCES = shutdown.c
+shutdown_LDFLAGS = -static
+shutdown_LDADD = ../../upstart/libupstart.la ../../nih/libnih.la $(LTLIBINTL)
+
+telinit_SOURCES = telinit.c
+telinit_LDFLAGS = -static
+telinit_LDADD = ../../upstart/libupstart.la ../../nih/libnih.la $(LTLIBINTL)
+
+
 install-data-hook:
 	src=`echo initctl | sed '$(transform)'`.8; \
 	for symlink in start stop status; do \
@@ -31,9 +93,23 @@ install-data-hook:
 	  ln -sf "$$src" "$(DESTDIR)$(man8dir)/$$inst"; \
 	done
 
+	src=`echo reboot | sed '$(transform)'`.8; \
+	for symlink in halt poweroff; do \
+	  inst=`echo $$symlink | sed '$(transform)'`.8; \
+          echo " ln -sf '$$src' '$(DESTDIR)$(man8dir)/$$inst'"; \
+	  ln -sf "$$src" "$(DESTDIR)$(man8dir)/$$inst"; \
+	done
+
 install-exec-hook:
 	src=`echo initctl | sed '$(transform);s/$$/$(EXEEXT)/'`; \
 	for symlink in start stop status; do \
+	  inst=`echo $$symlink | sed '$(transform);s/$$/$(EXEEXT)/'`; \
+          echo " ln -sf '$$src' '$(DESTDIR)$(sbindir)/$$inst'"; \
+	  ln -sf "$$src" "$(DESTDIR)$(sbindir)/$$inst"; \
+	done
+
+	src=`echo reboot | sed '$(transform);s/$$/$(EXEEXT)/'`; \
+	for symlink in halt poweroff; do \
 	  inst=`echo $$symlink | sed '$(transform);s/$$/$(EXEEXT)/'`; \
           echo " ln -sf '$$src' '$(DESTDIR)$(sbindir)/$$inst'"; \
 	  ln -sf "$$src" "$(DESTDIR)$(sbindir)/$$inst"; \
